--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div class="links">
-  <span><a routerLink="/login" routerLinkActive="active">Login</a></span>
-  <span><a routerLink="/register" routerLinkActive="active">Register</a></span>
-  <span><a routerLink="/stocks/list" routerLinkActive="active">Stock List</a></span>
-  <span><a routerLink="/stocks/create" routerLinkActive="active">Create Stock</a></span>
+<!--The content below is only a placeholder and can be replaced.-->
+<div style="text-align:center">
+  <h1>
+    Welcome to {{ title }}!
+  </h1>
+  <app-stock-list>
+  </app-stock-list>
+  <app-create-stock>
+  </app-create-stock>
 </div>
-<router-outlet></router-outlet>
