--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -1,13 +1,17 @@
-<div class="stock-container" routerLink="/stock/{{stock.code}}" *ngIf="stock">
+<div class="stock-container">
   <div class="name">
     <h3>{{stock.name}}</h3> - <h4>({{stock.code}})</h4>
   </div>
   <div class="price"
-       [class.positive]="stock.price > stock.previousPrice"
-       [class.negative]="stock.price <= stock.previousPrice">
+       [class.positive]="stock.isPositiveChange()"
+       [class.negative]="!stock.isPositiveChange()">
     $ {{stock.price}}
   </div>
   <button (click)="onToggleFavourite()"
           *ngIf="!stock.favourite">Add to Favourite</button>
   <span *ngIf="stock.favourite">Stock is favourited</span>
+
+  <button (click)="editStock()">Edit</button>
+
+
 </div>
