--- a/src/app/stock/stock-list/stock-list.component.html
+++ b/src/app/stock/stock-list/stock-list.component.html
@@ -1,3 +1,3 @@
-<span class="stock-container" *ngFor="let stock of stocks$ | async; index as i; trackBy: trackStockByCode">
-  <app-stock-item [stock]="stock"></app-stock-item>
+<span class="stock-container" *ngFor="let stock of stocks; index as i; trackBy: trackStockByCode">
+  <app-stock-item [stock]="stock" (editStockEvent)="whenEditCalled($event)" (toggleFavourite)="whenFavouriteToggled($event)"></app-stock-item>
 </span>
